# connected-vehicle-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.github/workflows/: ci.yml
cmake/: FetchPahoMqtt.cmake  FindCommonAPI.cmake
config/: app_settings.json  commonapi-someip.ini  mqtt.json  vsomeip.json
docker/: Dockerfile
docs/: README.md
fidl/: ConnectedVehiclePlatform.fdepl  Connectivity.fidl  Diagnostics.fidl  VehicleSignal.fidl
include/connected_vehicle_platform/: auth_client.hpp  auth_session.hpp  connectivity_runtime.hpp  connectivity_service.hpp  diagnostics_service.hpp  logger.hpp  mqtt_client.hpp  mqtt_gateway.hpp  someip_client.hpp  telemetry_manager.hpp  vehicle.hpp  vehicle_signal_service.hpp
scripts/: generate_commonapi.py
src/: main.cpp  vehicle.cpp
src/AuthClient/: auth_client.cpp
src/ConnectivityService/: connectivity_service.cpp
src/Logger/: logger.cpp
src/MqttClient/: mqtt_client.cpp
src/SomeipClient/: someip_client.cpp
src/TelemetryManager/: telemetry_manager.cpp
src/auth/: auth_session.cpp
src/connectivity/: connectivity_runtime.cpp
src/mqtt/: mqtt_gateway.cpp
src/services/: diagnostics_service.cpp  vehicle_signal_service.cpp
tests/: adaptive_autosar_tests.cpp  connectivity_tests.cpp  someip_tests.cpp  test_vehicle.cpp
